Fri Feb 11 07:32:06 2005  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS_NS_sys_time.h:
        * ace/OS_NS_sys_time.inl:
        * ace/OS_NS_time.h:
        * ace/Time_Value.h:
        * ace/Time_Value.inl:

          Enhanced support for Release mode builds for EVC 4.

Fri Feb 11 08:54:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
          Group all ciao projects together and get then the version from
          the version file in the CIAO directory. This way with a release
          the ciao documentation gets the correct version number

Fri Feb 11 08:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/outputdir.bor:
          Don't use separate output directories for the output, this is
          not used anymore after the switch to MPC.

        * bin/MakeProjectCreator/templates/bor.mpd:
          No need to set STATIC_DIR, DEBUG_DIR and UNICODE_DIR anymore

        * include/makeinclude/recurse.bor:
        * bin/MakeProjectCreator/modules/BorlandWorkspaceCreator.pm:
          Removed usage of MAKE_FLAGS, was not set at all

Fri Feb 11 08:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added !IRIX to the Bug_1361_Regression tests, it hangs forever on
          Irix

Thu Feb 10 07:04:33 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 5.4.4 released.

Thu Feb 10 02:51:19 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * Release: Added *.vcw files to the tar distribution.

Thu Feb 10 08:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release:
          Don't do crlf conversion on .vsd files, that are Microsoft Visio
          files which must be shipped unmodified

Wed Feb  9 14:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release:
          Added the removal of the temporary file we create in the